<resources>
    <string name="app_name">Segura Luggage Manager</string>
    <string name="open">Drawer Open</string>
    <string name="close">Drawer Close</string>
    <string name="home">Home</string>
    <string name="profile">My Account</string>
    <string name="feedback">FeedBack</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign Out</string>
    <string name="privacy_policy_content">@string/privacy_policy_text</string>
</resources>
